# myenv

./: .age-recipients  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile.alpine  Makefile  README.md  TODO.org  Xmodmap.symlink  Xresources.symlink  default.nix  elster.age  flake.nix  ghci.symlink  gitconfig.symlink  gitignore.symlink  gitignore_global.symlink  home.nix  i3.conf.symlink  install  mbsyncrc.symlink  nixos.sh  online-perso.age  overlay.nix  pkgs.nix  plumbing.symlink  prepare.alpine  profile.symlink  sonnen.age  test.age  tmux.conf.symlink  urkornpuristen.de.age  vimrc.symlink  wire.age  xinitrc.symlink  xmobarrc.symlink
aliases/: Makefile  Watch  _unalias  agda  ghc  ghc-pkg  hwk
apps/: aok-app.age  aok.age  gls-banking.age  secure-go.age
devices/: c10a.age  mybook.age
dotfiles/: Makefile  README.md  Xmodmap  Xmodmap.symlink  Xresources  ctags  emacs  ghci  gitconfig  gitconfig.symlink  gitignore_global.symlink  i3.conf.symlink  i3status.conf.symlink  install  mbsyncrc  mkshrc  npmrc  plumbing  plumbing.symlink  profile  profile.symlink  shinit  tmux.conf  tmux.conf.symlink  vimrc  vimrc.symlink  xinitrc  xinitrc.symlink  xmobarrc  xmobarrc.symlink  xsession
dotfiles/xmonad/: .sosrc  build  build.symlink  myXmonad.cabal  shell.nix  xmonad.hs  xmonad.hs.symlink
games/: 8wayrun.age  discord.age  dst-cluster.age  gog.age  nintendo.com.age  nintendoNetworkId.age  parsec.age  playstationNetwork.age  pokemon.age  steam.age  steamRestore.age
git/: pre-commit
gls/: gls.age  (+5 more)
tools/shell/: Shell.hs  default.nix  neosimsim-shell.cabal
(+430 files in other folders)
