cabal-version: >=1.10
version:       0.0.0.0
name:          myXmonad
build-type:    Simple

executable xmonad-x86_64-linux
  main-is:          xmonad.hs
  build-depends:
      base            >=4.14 && <4.15
    , X11
    , xmonad
    , xmonad-contrib

  ghc-options:      -Wall -Werror
  default-language: Haskell2010
