cabal-version:      2.4
name:               neosimsim-shell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Shell
  ghc-options:      -Weverything -Werror -Wno-unsafe -Wno-missing-safe-haskell-mode
  build-depends:
    , base
    , bytestring
    , text
    , typed-process

  default-language: Haskell2010
